<?xml version="1.0"?>
<package>
  <name>controller</name>
  <version>1.0.0</version>
  <description>Generic Robot Interface</description>

  <maintainer email="edwin.babaians@tum.de">edwin babaians</maintainer>

  <license>TODO</license>

  <url type="website">www.edwinbabaians.xyz</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
